# origin

3.1 Structures and enumerations/Task 1 Months/Task 1 Months/: Task 1 Months.sln
3.1 Structures and enumerations/Task 2. Accounts/Task 2. Accounts/: Task 2. Accounts.sln
3.1 Structures and enumerations/Task 3. Deriving the structure/Task 3. Deriving the structure/: Task 3. Deriving the structure.sln
3.10 Building and connecting libraries/1. Static library/src/: CMakeLists.txt  main.cpp
3.10 Building and connecting libraries/2. Dynamic library/: CMakeLists.txt  main.cpp
3.10 Building and connecting libraries/2. Dynamic library/My_dinamic_lib/: My_dinamic_lib.sln
3.10 Building and connecting libraries/2. Dynamic library/leaver_dll/: CMakeLists.txt  Leaver.h
3.10 Building and connecting libraries/3. Dynamic library Cmake/src/: CMakeLists.txt
3.10 Building and connecting libraries/4. Class hierarchy/Class_dll/: Class_dll.sln
3.10 Building and connecting libraries/5. Class hierarchy/src/: CMakeLists.txt  main.cpp
3.10 Building and connecting libraries/5. Class hierarchy/src/class_dll/: CMakeLists.txt  Equilateral_Triangle.h  Exc.h  Figure.h  Isosceles_Triangle.cpp  Isosceles_Triangle.h  Parallelogram.h  Quadrangle.h  Rectangle.h  Rhombus.cpp  Rhombus.h  Right_Triangle.h  Square.h  Triangle.h
3.2 Classes and objects/1. Two number calculator/1. Two number calculator/: 1. Two number calculator.sln
3.2 Classes and objects/2. Counter/2. Counter/: 2. Counter.sln
3.9 CMake/1. The simplest project/: CMakeLists.txt
3.9 CMake/2. Shapes. Sides and corners/: CMakeLists.txt  Exc.h  Isosceles_Triangle.h  Parallelogram.h  Quadrangle.cpp  Rectangle.h  Square.cpp  Triangle.h  main.cpp
3.9 CMake/2. Shapes. Sides and corners/Sources/: CMakeLists.txt  Parallelogram.cpp  Quadrangle.h  Rectangle.cpp  Rhombus.h
3.9 CMake/Новая папка/: Новый текстовый документ.txt
Racing simulator/src/: CMakeLists.txt  main.cpp
Racing simulator/src/lib/: Air.cpp  Air.h  Bot_vezde_hod.cpp  Bot_vezde_hod.h  CMakeLists.txt  Centavr.cpp  Centavr.h  Cover_sam_let.cpp  Cover_sam_let.h  Error.cpp  Error.h  Functions.cpp  Functions.h  Ground.cpp  Ground.h  Metla.cpp  Metla.h  Orel.cpp  Orel.h  Verblud.cpp  Verblud.h  Verblud_Speed.cpp  Verblud_Speed.h
(+108 files in other folders)
